@@ -586,7 +586,7 @@ public:
     return (*this == rhs);
   }
 
-  /* Method contains() is for Python */
+  /** Whether the list contains the value val */
   Bool contains(const NumericalPoint & val) const;
 
   /** Size accessor */
