@@ -6,10 +6,11 @@
 
 %include Collection_doc.i
 
+%rename(__contains__) OT::Collection::contains;
 %include openturns/Collection.hxx
 %copyctor Collection;
 
-namespace OT {  
+namespace OT {
 
 %extend Collection {
 
