@@ -15,6 +15,8 @@
 
 %apply const FieldImplementation & { const OT::FieldImplementation & };
 
+%rename(__contains__) OT::FieldImplementation::contains;
+
 %include openturns/FieldImplementation.hxx
 
 
